--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Xolio - Creative Agency Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -30,7 +30,7 @@
     <div id="preloader">
         <div id="loader" class="loader">
             <div class="loader-container">
-                <div class="loader-icon"><img src="/assets/img/preloader.png" alt="Crazy-Softnet Technologies"></div>
+                <div class="loader-icon"><img src="assets/img/preloader.png" alt="Crazy-Softnet Technologies"></div>
             </div>
         </div>
     </div>
@@ -57,7 +57,7 @@
                         <div class="menu-wrap">
                             <nav class="menu-nav">
                                 <div class="logo">
-                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="navbar-wrap main-menu d-none d-lg-flex">
                                     <ul class="navigation">
@@ -101,7 +101,7 @@
                             <nav class="menu-box">
                                 <div class="close-btn"><i class="fas fa-times"></i></div>
                                 <div class="nav-logo">
-                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="menu-outer">
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -184,7 +184,7 @@
                                                 <a href="project-details.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
-                                                <img src="/assets/img/images/our_project_img.png" alt="">
+                                                <img src="assets/img/images/our_project_img.png" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -196,7 +196,7 @@
                                 <h4 class="title">Customer Support</h4>
                                 <div class="customer-support-content">
                                     <div class="content-top">
-                                        <img src="/assets/img/images/support_img.png" alt="">
+                                        <img src="assets/img/images/support_img.png" alt="">
                                         <h4 class="title">Need Help Choosing a Plan?</h4>
                                     </div>
                                     <p>We offer solutions for businesses of all sizes. For questions about our plans and
@@ -241,9 +241,9 @@
                 </div>
             </div>
             <div class="breadcrumb-shape-wrap-three">
-                <img src="/assets/img/images/breadcrumb_shape04.png" alt="" class="wow zoomIn" data-wow-delay=".2s">
-                <img src="/assets/img/images/breadcrumb_shape05.png" alt="" class="wow zoomIn" data-wow-delay=".2s">
-                <img src="/assets/img/images/breadcrumb_shape06.png" alt="" class="wow zoomIn" data-wow-delay=".2s">
+                <img src="assets/img/images/breadcrumb_shape04.png" alt="" class="wow zoomIn" data-wow-delay=".2s">
+                <img src="assets/img/images/breadcrumb_shape05.png" alt="" class="wow zoomIn" data-wow-delay=".2s">
+                <img src="assets/img/images/breadcrumb_shape06.png" alt="" class="wow zoomIn" data-wow-delay=".2s">
             </div>
         </section>
         <!-- breadcrumb-area-end -->
@@ -294,7 +294,7 @@
                                     <li>
                                         <div class="contact-info-item">
                                             <div class="icon">
-                                                <img src="/assets/img/icon/loction_icon03.png" alt="">
+                                                <img src="assets/img/icon/loction_icon03.png" alt="">
                                             </div>
                                             <div class="content">
                                                 <h6 class="title">Address</h6>
@@ -305,7 +305,7 @@
                                     <li>
                                         <div class="contact-info-item">
                                             <div class="icon">
-                                                <img src="/assets/img/icon/mail_icon03.png" alt="">
+                                                <img src="assets/img/icon/mail_icon03.png" alt="">
                                             </div>
                                             <div class="content">
                                                 <h6 class="title">Email</h6>
@@ -316,7 +316,7 @@
                                     <li>
                                         <div class="contact-info-item">
                                             <div class="icon">
-                                                <img src="/assets/img/icon/phone_icon03.png" alt="">
+                                                <img src="assets/img/icon/phone_icon03.png" alt="">
                                             </div>
                                             <div class="content">
                                                 <h6 class="title">Phone</h6>
@@ -345,7 +345,7 @@
                         <div class="col-xl-6 col-lg-8">
                             <div class="footer-content-two text-center">
                                 <div class="logo">
-                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt=""></a>
+                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                                 </div>
                                 <p>Agency is a full-service agency, busy designing and building beautiful digital
                                     products,
@@ -365,10 +365,10 @@
                             <div class="footer-social-two">
                                 <ul class="list-wrap">
                                     <li class="title">Follow us</li>
-                                    <li><a href="#"><img src="/assets/img/icon/footer_icon01.png" alt=""></a></li>
-                                    <li><a href="#"><img src="/assets/img/icon/footer_icon02.png" alt=""></a></li>
-                                    <li><a href="#"><img src="/assets/img/icon/footer_icon03.png" alt=""></a></li>
-                                    <li><a href="#"><img src="/assets/img/icon/footer_icon04.png" alt=""></a></li>
+                                    <li><a href="#"><img src="assets/img/icon/footer_icon01.png" alt=""></a></li>
+                                    <li><a href="#"><img src="assets/img/icon/footer_icon02.png" alt=""></a></li>
+                                    <li><a href="#"><img src="assets/img/icon/footer_icon03.png" alt=""></a></li>
+                                    <li><a href="#"><img src="assets/img/icon/footer_icon04.png" alt=""></a></li>
                                 </ul>
                             </div>
                         </div>
